index.html modified

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!--************ MAIN ************-->
   <main class="main">
     <!--========================== HOME ===========================-->
-    <section class="section home" id="home"><img class="home-img" src="img/home1.jpg" alt="">
+    <section class="home" id="home"><img class="home-img" src="img/home1.jpg" alt="">
       <div class="container home-container grid">
         <div class="home-data"> <span class="subtitle">Discover your place</span>
           <h1 class="title">Explore The <br> Best <b>Beautiful <br> Beaches</b></h1><a class="button"
